add action trigger from an update to any of the blog psots

--- a/.github/workflows/lamarrio.yml
+++ b/.github/workflows/lamarrio.yml
@@ -4,6 +4,9 @@ name: Deploy
 on:
   push:
     branches: [ main ]
+  repository_dispatch:
+    types:
+      - cms-update
 permissions:
   id-token: write
   contents: read 
